--- a/.github/workflows/action-ki_multibranch.yml
+++ b/.github/workflows/action-ki_multibranch.yml
@@ -6,11 +6,15 @@ name: CI
 on:
   
   push:
+    # Triggers the workflow on push events for the branches start with release
+    branches:
+      - 'release/**'
+
     # Triggers the workflow on push events but only for the master branch
     #branches: [ master ]
 
     # Triggers the workflow on push tag
-    tags: ['*']
+    #tags: ['*']
     
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
