--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
@@ -7,7 +7,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.13</Version>
+		<Version>2.2.14-temp</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
