--- a/.github/workflows/action-ki_multibranch.yml
+++ b/.github/workflows/action-ki_multibranch.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: ki_multibranch
 
 # Controls when the action will run. 
 on:
@@ -40,7 +40,7 @@ jobs:
            export NUGET_SERVER="${{ secrets.NUGET_SERVER  }}"
            export NUGET_KEY="${{ secrets.NUGET_KEY }}"
            export GIT_SSH_SECRET="${{ secrets.GIT_SSH_SECRET }}"
-           cd ./Publish/DevOps/github-bash
+           cd ./Publish/DevOps2/github-bash
            bash startup.bash
            echo build succeed!
            
