--- a/Vit.Excel/Vit.Excel/Vit.Excel.csproj
+++ b/Vit.Excel/Vit.Excel/Vit.Excel.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.15-temp</Version>
+        <Version>2.2.15</Version>
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
