--- a/.github/workflows/ki_devops3.yml
+++ b/.github/workflows/ki_devops3.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: ki_multibranch
+name: ki_devops3
 
 # Controls when the action will run. 
 on:
@@ -44,7 +44,7 @@ jobs:
            export NUGET_KEY="${{ secrets.NUGET_KEY }}"
            export WebDav_BaseUrl="${{ secrets.WebDav_BaseUrl }}"
            export WebDav_User="${{ secrets.WebDav_User }}"
-           cd ./Publish/DevOps2/github-bash
+           cd ./Publish/DevOps3/github-bash
            bash startup.bash
            echo build succeed!
            
