--- a/Vit.Excel/Vit.Excel/Vit.Excel.csproj
+++ b/Vit.Excel/Vit.Excel/Vit.Excel.csproj
@@ -7,7 +7,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Version>2.2.16-temp</Version>
-        <LangVersion>preview</LangVersion>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup>
