--- a/Vit.OnlineUpgrade/Test/Vit.OnlineUpgrade.NetCoreApp21.Demo/Vit.OnlineUpgrade.Netcore.Demo.csproj
+++ b/Vit.OnlineUpgrade/Test/Vit.OnlineUpgrade.NetCoreApp21.Demo/Vit.OnlineUpgrade.Netcore.Demo.csproj
@@ -1,22 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Vit.OnlineUpgrade.Netcore\Vit.OnlineUpgrade.Netcore.csproj" />
-  </ItemGroup>
-
- 
+    <ItemGroup>
+        <ProjectReference Include="..\..\Vit.OnlineUpgrade.Netcore\Vit.OnlineUpgrade.Netcore.csproj" />
+    </ItemGroup>
 
 </Project>
