--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Version>2.2.16-temp</Version>
     </PropertyGroup>
 
@@ -19,9 +19,7 @@
         <DocumentationFile>bin\Debug\netstandard2.0\Vit.OnlineUpgrade.Netcore.xml</DocumentationFile>
     </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.0" />
-    </ItemGroup>
+
 
     <ItemGroup>
         <ProjectReference Include="..\Vit.OnlineUpgrade\Vit.OnlineUpgrade.csproj" />
