--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
@@ -6,26 +6,27 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Version>2.2.16-temp</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
-        <Description>在线升级</Description>
+        <Description>station online upgrade</Description>
         <PackageProjectUrl>https://github.com/serset/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
-        <DocumentationFile>bin\Debug\netstandard2.0\Vit.OnlineUpgrade.xml</DocumentationFile>
+        <DocumentationFile>bin\Debug\net6.0\Vit.OnlineUpgrade.xml</DocumentationFile>
     </PropertyGroup>
 
 
+
     <ItemGroup>
-        <PackageReference Include="Vit.Core" Version="2.1.21" />
-        <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-        <PackageReference Include="Vit.Net.Http.FormFile" Version="2.1.21" />
+        <PackageReference Include="Vit.Core" Version="2.2.0" />
+        <PackageReference Include="Vit.WebHost" Version="6.1.0" />
+
     </ItemGroup>
 
 </Project>
