--- a/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
+++ b/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.16-temp</Version>
+        <Version>2.2.16</Version>
         <LangVersion>9.0</LangVersion>
         <PreserveCompilationContext>true</PreserveCompilationContext>
     </PropertyGroup>
