--- a/Vit.Http.ChunkUpload/Vit.Http.ChunkUpload/Vit.Http.ChunkUpload.csproj
+++ b/Vit.Http.ChunkUpload/Vit.Http.ChunkUpload/Vit.Http.ChunkUpload.csproj
@@ -5,25 +5,26 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.16-temp</Version>
+        <TargetFramework>net6.0</TargetFramework>
+        <Version>2.2.16</Version>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
-        <Description>AspNetCore分块上传文件</Description>
+        <Description>AspNetCore chunk upload file</Description>
         <PackageProjectUrl>https://github.com/serset/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
-        <DocumentationFile>bin\Debug\netstandard2.0\Vit.Http.ChunkUpload.xml</DocumentationFile>
+        <DocumentationFile>bin\Debug\net6.0\Vit.Http.ChunkUpload.xml</DocumentationFile>
     </PropertyGroup>
 
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Vit.Core" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.0" />
-        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
