--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>2.2.16-temp</Version>
+        <Version>2.2.16</Version>
     </PropertyGroup>
 
     <PropertyGroup>
