--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
@@ -7,7 +7,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>2.2.16-temp</Version>
+        <Version>2.2.16</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
