--- a/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
+++ b/Vit.DynamicCompile/Vit.DynamicCompile/Vit.DynamicCompile.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.17</Version>
+        <Version>2.2.18</Version>
         <LangVersion>9.0</LangVersion>
         <PreserveCompilationContext>true</PreserveCompilationContext>
     </PropertyGroup>
@@ -14,7 +14,6 @@
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>dynamic compile tool.
-
 add below config to csproj:
             <PropertyGroup>
                 <PreserveCompilationContext>true</PreserveCompilationContext>
@@ -22,7 +21,7 @@ add below config to csproj:
                 <MvcRazorExcludeRefAssembliesFromPublish>false</MvcRazorExcludeRefAssembliesFromPublish>
             </PropertyGroup>
         </Description>
-        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Vit-Lib/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
