--- a/Vit.Excel/Vit.Excel/Vit.Excel.csproj
+++ b/Vit.Excel/Vit.Excel/Vit.Excel.csproj
@@ -6,14 +6,14 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.17</Version>
+        <Version>2.2.18</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>tool for excel</Description>
-        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Vit-Lib/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
