--- a/Vit.Mail/Vit.Mail/Vit.Mail.csproj
+++ b/Vit.Mail/Vit.Mail/Vit.Mail.csproj
@@ -6,13 +6,13 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>2.2.17</Version>
+        <Version>2.2.18</Version>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>Email tool</Description>
-        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Vit-Lib/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
