--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade.Netcore/Vit.OnlineUpgrade.Netcore.csproj
@@ -6,13 +6,13 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>2.2.17</Version>
+        <Version>2.2.18</Version>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>AspNetCore online upgrade</Description>
-        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Vit-Lib/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
