--- a/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
+++ b/Vit.OnlineUpgrade/Vit.OnlineUpgrade/Vit.OnlineUpgrade.csproj
@@ -7,14 +7,14 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>2.2.17</Version>
+        <Version>2.2.18</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <PropertyGroup>
         <Authors>Lith</Authors>
         <Description>station online upgrade</Description>
-        <PackageProjectUrl>https://github.com/VitLibs/Vit.Library</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Vit-Lib/Vit.Library</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup>
